--- a/web.config
+++ b/web.config
@@ -4,18 +4,11 @@
         <httpErrors errorMode="Detailed" />
         <rewrite>
             <rules>
-                <rule name="ForceSSL" stopProcessing="true">
-                    <match url="(.*)" />
-                    <conditions>
-                        <add input="{HTTPS}" pattern="^OFF$" ignoreCase="true" />
-                    </conditions>
-                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
-                </rule>
                 <rule name="Proxy" stopProcessing="true">
                     <match url="(.*)" />
-                    <action type="Rewrite" url="https://tomssl.com/{R:1}" />
+                    <action type="Rewrite" url="http://tomssl.com/{R:1}" />
                     <serverVariables>
-                        <set name="HTTP_X_UNPROXIED_URL" value="https://tomssl.com/{R:1}" /> 
+                        <set name="HTTP_X_UNPROXIED_URL" value="http://tomssl.com/{R:1}" /> 
                         <set name="HTTP_X_ORIGINAL_ACCEPT_ENCODING" value="{HTTP_ACCEPT_ENCODING}" /> 
                         <set name="HTTP_X_ORIGINAL_HOST" value="{HTTP_HOST}" />
                         <set name="HTTP_ACCEPT_ENCODING" value="" />
@@ -24,8 +17,8 @@
             </rules>
             <outboundRules>
                 <rule name="ChangeReferencesToOriginalUrl" patternSyntax="ExactMatch" preCondition="CheckContentType">
-                       <match filterByTags="None" pattern="https://tomssl.com" />
-                       <action type="Rewrite" value="https://{HTTP_X_ORIGINAL_HOST}" />
+                       <match filterByTags="None" pattern="http://tomssl.com" />
+                       <action type="Rewrite" value="http://{HTTP_X_ORIGINAL_HOST}" />
                   </rule>
                 <rule name="WordRedactionFilter1" patternSyntax="ExactMatch" preCondition="CheckContentType">
                        <match filterByTags="None" pattern=" the " />
