--- a/web.config
+++ b/web.config
@@ -6,7 +6,7 @@
             <rules>
                 <rule name="Proxy" stopProcessing="true">
                     <match url="(.*)" />
-                    <action type="Rewrite" url="http://tomssl.com/{R:1}" />
+                    <action type="Rewrite" url="http://krzysztofszabelski.com/{R:1}" />
                 </rule>
             </rules>
         </rewrite>
