--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
         <rewrite>
             <rules>
                 <rule name="Proxy" stopProcessing="true">
-                    <match url="(.*)" />
+                    <match url="^szabl/?(.*)" />
                     <action type="Rewrite" url="http://krzysztofszabelski.com/{R:1}" />
                 </rule>
             </rules>
